# helpdesk-api

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  debug_bitrix_repro.py  debug_fields.py  docker-compose.yml  gitlab-ci.yml  main.py  mapeamento.txt  pyproject.toml
.agent/skills/backend-architect/: SKILL.md
.agent/skills/bitrix-expert/: SKILL.md
.agent/skills/data-storage/: SKILL.md
.agent/skills/frontend-architect/: SKILL.md
.agent/skills/geral/: SKILL.md
app/: __init__.py  main.py
app/core/: config.py  constants.py  database.py  interfaces.py  security.py
app/models/: __init__.py  activity.py  activity_files.py  deal_files.py  deals.py  users.py
app/providers/: bitrix.py  bitrix_provider.py  storage.py  websocket.py
app/repositories/: activity.py  deals.py  users.py
app/routes/: __init__.py  tickets.py  uploads.py  users.py  webhook.py  websocket.py  websockets.py
app/schemas/: activity.py  bitrix.py  deals.py  tickets.py  upload.py  users.py
app/services/: deals.py  send_email.py  upload.py  users.py  webhook.py  websocket.py
app/utils/: __init__.py  auth_required.py
